# roscopter_equivariant_filter

./: .gitignore  LICENSE
roscopter_eqf/: CMakeLists.txt  package.xml
roscopter_eqf/include/eqf/: covariance.hpp  equivariant_state.hpp  error_dynamics.hpp  error_state.hpp  initialization.hpp  measurement.hpp  process_noise.hpp  robust_measurement.hpp  roscopter_eqf.hpp  state.hpp  utils.hpp
roscopter_eqf/include/param_manager/: param_manager.hpp
roscopter_eqf/src/eqf/: roscopter_eqf.cpp
roscopter_eqf/src/param_manager/: param_manager.cpp
roscopter_eqf/test/: test_lambda.cpp  test_phi.cpp
