<?xml version="1.0"?>
<package format="3">
  <name>roscopter_eqf</name>
  <version>0.0.0</version>
  <description>Bare bones roscopter equivariant filter estimator package.</description>

  <maintainer email="ian.young.reid@gmail.com">Ian Reid</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscopter</depend>
  <depend>roscopter_msgs</depend>
  <depend>rosflight_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
